In Progress : RI, RS, RD 구현 필요

--- a/data_augmentation/data_augmentation.ipynb
+++ b/data_augmentation/data_augmentation.ipynb
@@ -69,23 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/214 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/214 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/214 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/97 [00:00<?, ?it/s]67s/it]\n",
-      "  0%|          | 0/97 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/97 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/1277 [00:00<?, ?it/s]s/it]\n",
-      "  0%|          | 0/1277 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/1277 [00:00<?, ?it/s]\n",
-      "100%|██████████| 3/3 [00:05<00:00,  1.78s/it]\n"
+      "100%|██████████| 214/214 [02:24<00:00,  1.49it/s]\n",
+      "100%|██████████| 214/214 [11:53<00:00,  3.34s/it]\n",
+      "100%|██████████| 214/214 [06:51<00:00,  1.93s/it]\n",
+      "100%|██████████| 97/97 [03:15<00:00,  2.02s/it]\n",
+      "100%|██████████| 97/97 [05:24<00:00,  3.35s/it]\n",
+      "100%|██████████| 97/97 [02:58<00:00,  1.84s/it]\n",
+      "100%|██████████| 1277/1277 [42:55<00:00,  2.02s/it]\n",
+      "100%|██████████| 1277/1277 [1:16:40<00:00,  3.60s/it]\n",
+      "100%|██████████| 1277/1277 [47:50<00:00,  2.25s/it]\n",
+      "100%|██████████| 3/3 [3:20:15<00:00, 4005.31s/it]\n"
      ]
     }
    ],
@@ -108,7 +108,6 @@
     "        except:\n",
     "            failed.append(original_text)\n",
     "            continue\n",
-    "        break\n",
     "\n",
     "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
     "    temp_df.to_csv(fr\"../data/{label}_en.csv\")\n",
@@ -122,7 +121,6 @@
     "        except:\n",
     "            failed.append(original_text)\n",
     "            continue\n",
-    "        break\n",
     "\n",
     "\n",
     "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
@@ -137,11 +135,73 @@
     "        except:\n",
     "            failed.append(original_text)\n",
     "            continue\n",
-    "        break\n",
     "\n",
     "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
     "    temp_df.to_csv(fr\"../data/{label}_zh.csv\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 결과 병합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = r\"../data\"\n",
+    "files = [file_name for file_name in os.listdir(folder_path) if file_name[0] in ['2', '3']]\n",
+    "\n",
+    "dfs = []\n",
+    "\n",
+    "for file in files:\n",
+    "    df = pd.read_csv(os.path.join(folder_path, file), index_col = 0)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "dfs = pd.concat(dfs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "english_words_pattern = re.compile(r'\\b[a-zA-Z]+\\b')\n",
+    "english_mask = dfs['text'].apply(lambda row: bool(english_words_pattern.search(str(row))))\n",
+    "dfs_aft = dfs[~english_mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs_aft.to_csv(\"../data/dfs_aft.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
