--- a/data_augmentation/easy_data_augmentation.ipynb
+++ b/data_augmentation/easy_data_augmentation.ipynb
@@ -124,26 +124,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "기업 동료 분들과 다녀왔는데 분위기도 좋고 음식도 맛있었어요 다만, 강남 토끼노정이 강남 쉑쉑버거 소로로 쭉 올라가야 하는데 다들 쉑쉑버거의 유혹에 넘어갈 뻔 했답니다\n",
+      "회사 동료소로 분들과 다녀왔는데 분위기도 좋고 음식노정도 맛있었어요 다만, 강남 토끼정이 강남 쉑쉑버거 골목길로기업 쭉 올라가야 하는데 다들 쉑쉑버거의 유혹에 넘어갈 뻔 했답니다\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"회사 동료 분들과 다녀왔는데 분위기도 좋고 음식도 맛있었어요 다만, 강남 토끼정이 강남 쉑쉑버거 골목길로 쭉 올라가야 하는데 다들 쉑쉑버거의 유혹에 넘어갈 뻔 했답니다\"\n",
-    "t = synonym_replacement(text, 5)"
+    "t = synonym_replacement(text, 5)\n",
+    "tt = random_insertion(text, 5)\n",
+    "\n",
+    "print(t)\n",
+    "print(tt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_insertion(text, num_replacement):\n",
-    "\n",
+    "    \n",
     "    morphemes = kss.split_morphemes(text, drop_space=False)\n",
     "    morphemes_copy = list(enumerate(morphemes.copy()))\n",
     "\n",
     "    cnt_replacement = 0\n",
+    "    inserted = []\n",
     "\n",
     "    # 순서 섞기\n",
     "    random.shuffle(morphemes_copy)\n",
@@ -155,7 +169,8 @@
     "\n",
     "            if dict_value:\n",
     "                replace_word = set(dict_value).pop()\n",
-    "                morphemes[idx] = (replace_word, pos)\n",
+    "                rand_int = random.randint(0, len(morphemes_copy)) + random.random()\n",
+    "                inserted.append((rand_int, (replace_word, pos)))\n",
     "                cnt_replacement += 1\n",
     "            \n",
     "        if cnt_replacement > num_replacement:\n",
@@ -163,8 +178,10 @@
     "\n",
     "    # 문서 재배치\n",
     "    text = \"\"\n",
+    "    morphemes_copy.extend(inserted)\n",
+    "    morphemes_copy.sort()\n",
     "\n",
-    "    for morph, _ in morphemes:\n",
+    "    for _, (morph, _) in morphemes_copy:\n",
     "        text += morph\n",
     "\n",
     "    return text"
