--- a/data_augmentation/easy_data_augmentation.ipynb
+++ b/data_augmentation/easy_data_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import kss\n",
-    "import random"
+    "import random\n",
+    "import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,30 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "기업 동료 분들과 다녀왔는데 분위기도 좋고 음식도 맛있었어요 다만, 강남 토끼노정이 강남 쉑쉑버거 소로로 쭉 올라가야 하는데 다들 쉑쉑버거의 유혹에 넘어갈 뻔 했답니다\n",
-      "회사 동료소로 분들과 다녀왔는데 분위기도 좋고 음식노정도 맛있었어요 다만, 강남 토끼정이 강남 쉑쉑버거 골목길로기업 쭉 올라가야 하는데 다들 쉑쉑버거의 유혹에 넘어갈 뻔 했답니다\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"회사 동료 분들과 다녀왔는데 분위기도 좋고 음식도 맛있었어요 다만, 강남 토끼정이 강남 쉑쉑버거 골목길로 쭉 올라가야 하는데 다들 쉑쉑버거의 유혹에 넘어갈 뻔 했답니다\"\n",
-    "t = synonym_replacement(text, 5)\n",
-    "tt = random_insertion(text, 5)\n",
-    "\n",
-    "print(t)\n",
-    "print(tt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,13 +167,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open(\"../data/stopword.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    stopwords = set([line.strip() for line in f.readlines()])\n",
+    "\n",
     "def random_deletetion(text, num_del):\n",
-    "    pass"
+    "    morphemes = kss.split_morphemes(text, drop_space=False)\n",
+    "    morphemes_copy = set(enumerate(morphemes.copy()))\n",
+    "\n",
+    "    # random delete\n",
+    "    del_cnt = 0\n",
+    "    num_iter = 0\n",
+    "\n",
+    "    while del_cnt < num_del and num_iter < len(text):\n",
+    "        popped = morphemes_copy.pop()\n",
+    "        _, (morph, pos) = popped\n",
+    "\n",
+    "        if morph in stopwords or not morph.isalpha():\n",
+    "            morphemes_copy.add(popped)\n",
+    "            continue\n",
+    "\n",
+    "        else:\n",
+    "            del_cnt += 1\n",
+    "\n",
+    "        num_iter += 1\n",
+    "\n",
+    "    morphemes_copy = sorted(list(morphemes_copy))\n",
+    "    \n",
+    "    text = \"\"\n",
+    "\n",
+    "    for _, (morph, _) in morphemes_copy:\n",
+    "        text += morph\n",
+    "\n",
+    "    return text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def EDA(text):\n",
+    "    num_process = int(len(text.split())*0.1) + 1\n",
+    "    text_1 = synonym_replacement(text, num_process)\n",
+    "    text_2 = random_insertion(text, num_process)\n",
+    "    text_3 = random_deletetion(text, num_process)\n",
+    "\n",
+    "    return [text_1, text_2, text_3]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 데이터 증강하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 파일 가져오기\n",
+    "\n",
+    "data_path = r\"../data/annotated_data_final.xlsx\"\n",
+    "df = pd.read_excel(data_path, index_col=None)[['text', 'label']]\n",
+    "\n",
+    "# augmentated 여부 붙이기\n",
+    "df['augmented'] = np.zeros([len(df)], dtype=np.int64)\n",
+    "\n",
+    "# label별 분류\n",
+    "df_label_0 = df[df.label == 0] # 혐의 없음\n",
+    "df_label_1 = df[df.label == 1] # 기관 사칭형\n",
+    "df_label_2 = df[df.label == 2] # 대출 빙자형\n",
+    "df_label_3 = df[df.label == 3] # 기타"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 214/214 [00:00<00:00, 3965.84it/s]\n",
+      "100%|██████████| 97/97 [00:00<00:00, 5695.19it/s]\n",
+      "100%|██████████| 2/2 [00:00<00:00, 22.71it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfs = [(2, df_label_2), (3, df_label_3)] # 1이 제일 많으므로 1을 제일 마지막으로 수행\n",
+    "failed = []\n",
+    "\n",
+    "for label, df in tqdm.tqdm(dfs):\n",
+    "    temp = []\n",
+    "\n",
+    "    # 안정성을 위해 비효율적이더라도 나눠서 실행\n",
+    "    for original_text in tqdm.tqdm(df.text.values): # ko -> eng -> ko\n",
+    "\n",
+    "        try:\n",
+    "            texts = EDA(original_text)\n",
+    "            temp.extend([(text, label, 1) for text in texts])\n",
+    "        except:\n",
+    "            failed.append(original_text)\n",
+    "            continue\n",
+    "    \n",
+    "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
+    "    temp_df.to_csv(fr\"../data/{label}_eda3.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
