Feat : Trainer 구현

--- a/data_task/dataset/make_dataset.ipynb
+++ b/data_task/dataset/make_dataset.ipynb
@@ -354,10 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "total_data = total_data.sample(frac=1).reset_index(drop = True)\n",
     "total_data.to_excel(\"final_data.xlsx\")"
    ]
   },
