add : test data 추가
Former-commit-id: c01cf5064d780a4d1b6c96b5a26a703d682f1e10

--- a/data_task/data_augmentation/data_augmentation.ipynb
+++ b/data_task/data_augmentation/data_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 파일 가져오기\n",
     "\n",
-    "data_path = r\"../data/annotated_data_final.xlsx\"\n",
+    "data_path = r\"../data/AnnotationData_TEST(JH).xlsx\"\n",
     "df = pd.read_excel(data_path, index_col=None)[['text', 'label']]\n",
     "\n",
     "# augmentated 여부 붙이기\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,23 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 214/214 [02:24<00:00,  1.49it/s]\n",
-      "100%|██████████| 214/214 [11:53<00:00,  3.34s/it]\n",
-      "100%|██████████| 214/214 [06:51<00:00,  1.93s/it]\n",
-      "100%|██████████| 97/97 [03:15<00:00,  2.02s/it]\n",
-      "100%|██████████| 97/97 [05:24<00:00,  3.35s/it]\n",
-      "100%|██████████| 97/97 [02:58<00:00,  1.84s/it]\n",
-      "100%|██████████| 1277/1277 [42:55<00:00,  2.02s/it]\n",
-      "100%|██████████| 1277/1277 [1:16:40<00:00,  3.60s/it]\n",
-      "100%|██████████| 1277/1277 [47:50<00:00,  2.25s/it]\n",
-      "100%|██████████| 3/3 [3:20:15<00:00, 4005.31s/it]\n"
+      "100%|██████████| 50/50 [01:56<00:00,  2.33s/it]\n",
+      "100%|██████████| 50/50 [03:25<00:00,  4.10s/it]\n",
+      "100%|██████████| 50/50 [02:04<00:00,  2.49s/it]\n",
+      "100%|██████████| 1/1 [07:26<00:00, 446.12s/it]\n"
      ]
     }
    ],
@@ -93,7 +87,7 @@
     "# label별로 backtranslation 하기\n",
     "\n",
     "bt = BackTranslator()\n",
-    "dfs = [(2, df_label_2), (3, df_label_3), (1, df_label_1)] # 1이 제일 많으므로 1을 제일 마지막으로 수행\n",
+    "dfs = [(2, df_label_2)] # 1이 제일 많으므로 1을 제일 마지막으로 수행\n",
     "failed = []\n",
     "\n",
     "for label, df in tqdm.tqdm(dfs):\n",
@@ -104,40 +98,40 @@
     "\n",
     "        try:\n",
     "            bt_text = bt(original_text)\n",
-    "            temp.append([bt_text, 2, 1])\n",
+    "            temp.append([bt_text, label, 1])\n",
     "        except:\n",
     "            failed.append(original_text)\n",
     "            continue\n",
     "\n",
     "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
-    "    temp_df.to_csv(fr\"../data/{label}_en.csv\")\n",
+    "    temp_df.to_csv(fr\"../data/{label}_en_test.csv\")\n",
     "\n",
     "    temp = []\n",
     "    for original_text in tqdm.tqdm(df.text.values): # ko -> ja-> ko\n",
     "\n",
     "        try:\n",
     "            bt_text = bt(original_text, aux_lang=\"ja\")\n",
-    "            temp.append([bt_text, 2, 1])\n",
+    "            temp.append([bt_text, label, 1])\n",
     "        except:\n",
     "            failed.append(original_text)\n",
     "            continue\n",
     "\n",
     "\n",
     "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
-    "    temp_df.to_csv(fr\"../data/{label}_ja.csv\")\n",
+    "    temp_df.to_csv(fr\"../data/{label}_ja_test.csv\")\n",
     "\n",
     "    temp = []\n",
     "    for original_text in tqdm.tqdm(df.text.values): # ko -> zh_cn -> ko\n",
     "\n",
     "        try:\n",
     "            bt_text = bt(original_text, aux_lang=\"zh-cn\")\n",
-    "            temp.append([bt_text, 2, 1])\n",
+    "            temp.append([bt_text, label, 1])\n",
     "        except:\n",
     "            failed.append(original_text)\n",
     "            continue\n",
     "\n",
     "    temp_df = pd.DataFrame(temp, columns =['text', 'label', 'augmented'])\n",
-    "    temp_df.to_csv(fr\"../data/{label}_zh.csv\")"
+    "    temp_df.to_csv(fr\"../data/{label}_zh_test.csv\")"
    ]
   },
   {
@@ -150,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,25 +154,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r\"../data\"\n",
-    "files = [file_name for file_name in os.listdir(folder_path) if file_name[0] in ['2', '3']]\n",
+    "# bt & augmented data\n",
+    "folder_path = r\"../data/\"\n",
+    "files = os.listdir(folder_path)\n",
+    "\n",
+    "label_1 = [file for file in files if file.startswith('1')]\n",
+    "label_2 = [file for file in files if file.startswith('2')]\n",
+    "label_3 = [file for file in files if file.startswith('3')]\n",
+    "\n",
+    "labels = [(1, label_1), (2, label_2), (3,label_3)]\n",
     "\n",
     "dfs = []\n",
     "\n",
-    "for file in files:\n",
-    "    df = pd.read_csv(os.path.join(folder_path, file), index_col = 0)\n",
-    "    dfs.append(df)\n",
+    "for label_idx, label in labels:\n",
+    "\n",
+    "    temp_dfs = []\n",
+    "\n",
+    "    for file in label:\n",
+    "        df = pd.read_csv(os.path.join(folder_path, file), index_col = 0)\n",
+    "        df['label'] = np.array([label_idx] * len(df))\n",
+    "        temp_dfs.append(df)\n",
+    "\n",
+    "    temp_dfs = pd.concat(temp_dfs)\n",
+    "    dfs.append(temp_dfs)\n",
     "\n",
     "dfs = pd.concat(dfs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,11 +198,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs_aft.to_csv(\"../data/dfs_aft.csv\")"
+    "dfs_aft.to_csv(\"../data/dfs_bt_and_augmented.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "\n",
+    "folder_path = r\"../data/\"\n",
+    "files = [file for file in os.listdir(folder_path) if file.startswith('test')]\n",
+    "\n",
+    "dfs = []\n",
+    "\n",
+    "for file in files:\n",
+    "    df = pd.read_csv(os.path.join(folder_path, file), index_col = 0)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "dfs = pd.concat(dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs.to_csv(\"test_data_concatenated.csv\")"
    ]
   },
   {
