Feature : valid 수정
Former-commit-id: b0019ba08dc4522d78f005bb38172af110fcae4f

--- a/ml_task/trainer.ipynb
+++ b/ml_task/trainer.ipynb
@@ -150,7 +150,6 @@
     "    \n",
     "    def validate(self, index, valid_loader, verbose = True):\n",
     "\n",
-    "        valid_loss = 0\n",
     "        valid_correct = 0\n",
     "        valid_n_probs = 0\n",
     "        \n",
@@ -170,7 +169,7 @@
     "            y = y.squeeze().to(self.device)\n",
     "\n",
     "            pred = self.model(X)        \n",
-    "            loss = self.criterion(pred, y)\n",
+    "            valid_loss = self.criterion(pred, y)\n",
     "\n",
     "            pred_labels = pred.argmax(axis = 1)\n",
     "            n_correct = len(torch.where(pred_labels == y)[0])\n",
